--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,6 +1,6 @@
 <div id="main">
-  <div>
-    <div>
+  <div class="row mt-3">  
+    <div class="col-12">
         あなたの好みのお酒を探しましょう!<br/>
     </div>
   </div>
