--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,13 @@
 
   <body>
     <div class="container text-center">
+      <header class="row mb-3">
+        <div class="col-12">
+          <%= image_tag 'title.png', {width: 200} %>
+          <br>
+          <%= image_tag 'naninomu.png', {width: 200} %>
+      </header>
+
       <main class="row">
         <div class="col-8 offset-2">
           <%= yield %>
