--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,7 +1,15 @@
 <div id="main">
   <div class="row mt-3">  
     <div class="col-12">
-        あなたの好みのお酒を探しましょう!<br/>
+        貴方が飲みたいお酒を教えて下さい。<br/>
+        準備ができたらゲームを始めてね！
     </div>
   </div>
+  <%= form_with url: games_path, local:true do |f| %>
+    <div class="row mt-3">
+      <div class="col-6 offset-3">
+        <%= f.submit "はじめる", class:'btn btn-primary' %>
+      </div>
+    </div>
+  <% end %>
 </div>
