--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,9 +1,72 @@
-<h1>Cocktails</h1>
+<%= form_with(url: drinks_path, method: "get") do %>
 
-<% @cocktails.each do |cocktail| %> <!--各カクテルのデータにアクセスするために、each メソッドを使用 -->
+  <!-- アルコール度数 -->
   <div>
-    <h3><%= cocktail["cocktail_name"] %></h3>
-    <p>Alcohol: <%= cocktail["alcohol"] %> %</p>
-    <!-- ここで他のカクテル情報を表示することができます,例えば、説明や成分など -->
+    <label>アルコール度数</label>
+    <select name="alcohol_from">
+      <option value="0">3％前後</option>
+      <option value="4">10％前後</option>
+      <option value="15">20％前後</option>
+    </select>
+    <select name="alcohol_to">
+      <option value="5">3％前後</option>
+      <option value="15">10％前後</option>
+      <option value="30">20％前後</option>
+    </select>
+  </div>
+
+    <!-- ベース -->
+  <div>
+    <label>ベース</label>
+    <select name="base">
+      <option value="1">ジン</option>
+      <option value="2">ウォッカ</option>
+      <option value="3">テキーラ</option>
+      <option value="4">ラム</option>
+      <option value="5">ウイスキー</option>
+      <option value="6">ブランデー</option>
+      <option value="7">リキュール</option>
+      <option value="8">ワイン</option>
+      <option value="9">ビール</option>
+      <option value="10">日本酒</option>
+      <option value="0">ノンアルコール</option>
+    </select>
+  </div>
+
+  <!-- 味わい -->
+  <div>
+    <label>味わい</label>
+    <select name="taste">
+      <option value="1">甘口</option>
+      <option value="2">中甘口</option>
+      <option value="3">中口</option>
+      <option value="4">中辛口</option>
+      <option value="5">辛口</option>
+    </select>
+  </div>
+
+  <!-- 送信ボタン -->
+  <div>
+    <button type="submit">検索</button>
+  </div>
+<% end %>
+
+<% if @cocktails %>
+  <div class="cocktails">
+    <% @cocktails.each do |cocktail| %>
+      <div class="cocktail">
+        <h3><%= cocktail["cocktail_name"] %></h3>
+        <% if cocktail["cocktail_image"] %>
+          <img src="<%= cocktail["cocktail_image"] %>" alt="<%= cocktail["cocktail_name"] %>">
+        <% end %>
+        <p><%= cocktail["cocktail_desc"] %></p>
+        <!-- レシピの表示 -->
+        <ul>
+          <% cocktail["recipes"].each do |recipe| %>
+            <li><%= "#{recipe["ingredient_name"]}: #{recipe["amount"]} #{recipe["unit"]}" %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
   </div>
 <% end %>
