--- a/app/views/cocktails/result.html.erb
+++ b/app/views/cocktails/result.html.erb
@@ -1,4 +1,4 @@
-<h1>カクテルの結果</h1>
+<h2>カクテルの結果</h2>
 
 <% if @cocktails.any? %>
   <ul>
@@ -8,5 +8,6 @@
     <% end %>
   </ul>
 <% else %>
-  <p>該当するカクテルが見つかりませんでした。</p>
+  <p>その条件に当てはまるカクテルがありませんでした。</p>
+  条件を緩和して再度検索してみて下さい！
 <% end %>
