--- a/app/views/cocktails/step2.html.erb
+++ b/app/views/cocktails/step2.html.erb
@@ -4,46 +4,47 @@
 
   <fieldset class="mb-3">
     <legend class="form-label">ベースの選択</legend>
-    
     <div class="row">
-      <!-- 1列目 -->
-      <div class="col-md-4">
-      <label class="btn btn-outline-primary d-block mb-2">
-        <input type="radio" name="base" value="1" id="base1"> ジン
-      </label>
-      <label class="btn btn-outline-primary d-block mb-2">
-        <input type="radio" name="base" value="2" id="base2"> ウォッカ
-      </label>
-      <label class="btn btn-outline-primary d-block">
-        <input type="radio" name="base" value="3" id="base3"> テキーラ
-      </label>
+      <% 
+      bases = [
+        ['1', 'ジン'], 
+        ['2', 'ウォッカ'], 
+        ['3', 'テキーラ'], 
+        ['4', 'ラム'], 
+        ['5', 'ウイスキー'], 
+        ['6', 'ブランデー'], 
+        ['7', 'リキュール'], 
+        ['9', 'ビール'], 
+        ['0', 'ノンアルコール']
+      ]
+      %>
+      <% bases.each_with_index do |(value, label), index| %>
+        <% if index % 3 == 0 %><div class="col-md-4"><% end %>
+          <label class="btn btn-outline-primary d-block mb-2">
+            <input type="radio" name="base" value="<%= value %>" id="base<%= value %>"class="hidden-radio"> <%= label %>
+          </label>
+        <% if (index + 1) % 3 == 0 || index == bases.length - 1 %></div><% end %>
+      <% end %>
     </div>
-      <!-- 2列目 -->
-      <div class="col-md-4">
-      <label class="btn btn-outline-primary d-block mb-2">
-        <input type="radio" name="base" value="4" id="base4"> ラム
-      </label>
-      <label class="btn btn-outline-primary d-block mb-2">
-        <input type="radio" name="base" value="5" id="base5"> ウイスキー
-      </label>
-      <label class="btn btn-outline-primary d-block">
-        <input type="radio" name="base" value="6" id="base6"> ブランデー
-      </label>
-    </div>
-      <!-- 3列目 -->
-      <div class="col-md-4">
-      <label class="btn btn-outline-primary d-block mb-2">
-        <input type="radio" name="base" value="7" id="base7"> リキュール
-      </label>
-      <label class="btn btn-outline-primary d-block mb-2">
-        <input type="radio" name="base" value="9" id="base9"> ビール
-      </label>
-      <label class="btn btn-outline-primary d-block">
-        <input type="radio" name="base" value="0" id="base0"> ノンアルコール
-      </label>
-    </div>
-  </div>
-</fieldset>
+  </fieldset>
 
   <button type="submit" class="btn btn-primary mt-2">次へ</button>
 <% end %>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+  document.querySelectorAll('[name="base"]').forEach(function(radio) {
+    radio.addEventListener('change', function() {
+      // すべてのラベルのアクティブスタイルをリセット
+      document.querySelectorAll('.row .btn').forEach(function(label) {
+        label.classList.remove('active');
+      });
+
+      // 選択されたラジオボタンのラベルにアクティブスタイルを適用
+      if(this.checked) {
+        this.parentElement.classList.add('active');
+      }
+    });
+  });
+});
+</script>
