--- a/app/views/cocktails/step3.html.erb
+++ b/app/views/cocktails/step3.html.erb
@@ -1,18 +1,18 @@
 <%= form_with(url: results_cocktails_path, method: "get", class: "form-group") do %>
   <fieldset class="mb-3">
     <legend class="form-label">味わいの選択</legend>
-　　※この選択は複数選ぶことができます！
-
-    <% [["1", "甘口"], ["2", "中甘口"], ["3", "中口"], ["4", "中辛口"], ["5", "辛口"]].each do |value, label| %>
+    <% taste_groups = [
+      ['1,2', '甘口'],
+      ['3', '中口'],
+      ['4,5', '辛口']
+    ] %>
+    <% taste_groups.each do |value, label| %>
       <div class="form-check mb-2">
-        <input class="hidden-checkbox" type="checkbox" name="taste[]" value="<%= value %>" id="taste<%= value %>">
+        <input class="form-check-input" type="radio" name="taste_group" value="<%= value %>" id="taste<%= value %>">
         <label class="custom-radio-label" for="taste<%= value %>"><%= label %></label>
       </div>
     <% end %>
   </fieldset>
-
-  <input type="hidden" name="alcohol_content" value="<%= @alcohol_content %>">
-  <input type="hidden" name="base" value="<%= @base %>">
 
   <button type="submit" class="btn btn-primary mt-2">結果を表示</button>
 <% end %>
