--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -12,4 +12,11 @@
       </div>
     </div>
   <% end %>
+
+<!-- ログインページへのリンク -->
+  <div class="row mt-3">
+    <div class="col-6 offset-3">
+      <%= link_to 'ログイン', new_user_session_path, class: 'btn btn-primary' %>
+    </div>
+  </div>
 </div>
