レイアウト修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <div class="container text-center">
       <header class="row mb-3">
         <div class="col-12">
-          <%= image_tag 'title.png', {width: 200} %>
+          <%= link_to image_tag('title.png', width: 200), games_path %>
           <br>
           <%= image_tag 'naninomu.png', {width: 200} %>
       </header>
