--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag 'application', 'data-turbo-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -15,9 +15,9 @@
     <div class="container text-center">
       <header class="row mb-3">
         <div class="col-12">
-          <%= link_to image_tag('title.png', width: 200), games_path %>
+          <%= link_to image_tag('title.png', width: 300), games_path %>
           <br>
-          <%= image_tag 'naninomu.png', {width: 200} %>
+          <%= image_tag 'naninomu.png', {width: 350} %>
       </header>
 
       <main class="row">
