--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,9 +2,40 @@ body  {
   background-color: #FAEBD7 !important;
 }
 
+.bi-heart {
+  color: grey; /* 未選択時の色 */
+}
+
+.bi-heart-fill {
+  color: red; /* 選択時の色 */
+}
+
+.favorite-icon-link {
+  display: flex; /* フレックスボックスを使用 */
+  align-items: center; /* アイテムを垂直方向の中央に配置 */
+  justify-content: center; /* アイテムを水平方向の中央に配置 */
+}
+
+.custom-icon-link {
+  color: red; /* アイコンの色をピンクに設定 */
+  background-color: transparent;
+  border-radius: 50%;
+  text-decoration: none;
+  padding: 10px; /* アイコンの周りのスペース */
+}
+
+.custom-icon-link:hover {
+  color: pink; /* ホバー時のアイコンの色 */
+  background-color: transparent; /* ホバー時の背景色を変更しない */
+  text-decoration: none; /* ホバー時の下線を削除 */
+  padding: 10px; /* アイコンの周りのスペース */
+}
+
 .cocktails-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 20px;
   }
   
