--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,12 +1,12 @@
 <div id="main">
-  <div class="row mt-3">  
+  <div class="row mt-4">  
     <div class="col-12">
         貴方が飲みたいお酒を教えて下さい。<br/>
         準備ができたらゲームを始めてね！
     </div>
   </div>
   <%= form_with url: games_path, local:true do |f| %>
-    <div class="row mt-3">
+    <div class="row mt-5">
       <div class="col-6 offset-3">
         <%= f.submit "はじめる", class:'btn btn-primary' %>
       </div>
@@ -14,9 +14,27 @@
   <% end %>
 
 <!-- ログインページへのリンク -->
-  <div class="row mt-3">
+  <div class="row mt-2">
     <div class="col-6 offset-3">
-      <%= link_to 'ログイン', new_user_session_path, class: 'btn btn-primary' %>
+      <% if user_signed_in? %>
+      <div class="mt-4"> <!-- ここにマージントップを追加 -->
+        <%= link_to 'マイページ', user_path(current_user), class: 'btn btn-outline-primary mb-3' %>
+      </div>
+      <div>
+        <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'btn btn-outline-danger mb-4' %>
+      </div>
+    <% else %>
+      <%= link_to 'ログイン', new_user_session_path, class: 'btn btn-outline-primary mb-4' %>
+    <% end %>
+  </div>
+</div>
+
+<div class="container mt-5"> <!-- ここにマージントップを追加 -->
+  <div class="text-center">
+    <div class="btn-group" role="group">
+      <%= link_to 'お問い合わせ', contact_path, class: 'btn btn-link mr-2' %> <!-- ここにマージンライトを追加 -->
+      <%= link_to '利用規約', terms_path, class: 'btn btn-link mr-2' %> <!-- ここにマージンライトを追加 -->
+      <%= link_to 'プライバシーポリシー', privacy_path, class: 'btn btn-link' %>
     </div>
   </div>
 </div>
