--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -8,7 +8,7 @@
   <%= form_with url: games_path, local:true do |f| %>
     <div class="row mt-5">
       <div class="col-6 offset-3">
-        <%= f.submit "はじめる", class:'btn btn-primary' %>
+        <%= f.submit "はじめる", class:'btn btn-primary mb-4' %>
       </div>
     </div>
   <% end %>
