--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -20,6 +20,12 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
+    <% if provider == :google_oauth2 %>
+      <%= button_to omniauth_authorize_path(resource_name, :google_oauth2), id: "google-login-btn", method: :post, data: { turbo: false } do %>
+        <i class="fab fa-google"></i> Googleアカウントでログイン
+      <% end %>
+    <% else %>
+      <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
+    <% end %>
   <% end %>
 <% end %>
