--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,13 @@
 <h2>お気に入り一覧</h2>
 <div class="cocktail-card">
-  <div class="cocktail-info">
-    <% @user.bookmarks.each do |bookmark| %>
+  <div class="cocktail-info">  <!-- カクテル情報を表示するためのコンテナ -->
+    <% @user.bookmarks.each do |bookmark| %>  <!-- ユーザーのお気に入り（bookmarks）を繰り返し処理して表示 -->
         <div class="cocktail-info d-flex align-items-center justify-content-between">
         <div>
             <h5><%= bookmark.drink.name %></h5>
             <p><%= bookmark.drink.description %></p>
         </div>
+        <!-- お気に入りから削除するためのリンク。クリックするとお気に入りから削除される -->
         <%= link_to drink_bookmarks_path(bookmark.drink), method: :delete, class: 'custom-icon-link' do %>
             <i class="bi bi-heart-fill"></i>
         <% end %>
