--- a/app/views/cocktails/step3.html.erb
+++ b/app/views/cocktails/step3.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(url: results_cocktails_path, method: "get", class: "form-group") do %>  <!-- フォームを開始。送信先はresults_cocktails_pathで、メソッドはGET、classはform-group -->
   <fieldset class="mb-3">
-    <legend class="form-label">味わいの選択</legend>
+    <legend class="form-label">味わいの好みは？</legend>
     <div class="btn-group-vertical" role="group" aria-label="Taste Group">
       <% taste_groups = [['1,2', '甘口'], ['3', '中口'], ['4,5', '辛口']] %>
       <% taste_groups.each do |value, label| %>
