--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,16 +1,17 @@
 <div class="container">
   <div class="d-flex justify-content-center mt-1">
-    <%= form_with url: cocktails_search_path, method: :get, local: true, class: "form-inline my-2 my-lg-0" do |form| %>
-      <div class="col-md-6">
-        <%= form.label :word, "検索文字列", class: "sr-only" %>
-        <%= form.text_field :word, placeholder: "カクテルを検索", class: "form-control mr-sm-3" %>
-      </div>
-      <div class="col-md-6">
-        <%= form.submit "検索", class: "btn btn-outline-success my-2 my-sm-0" %>
-      </div>
-    <% end %>
+    <div class="col-auto">
+      <%= form_with url: cocktails_search_path, method: :get, local: true, class: "form-inline my-2 my-lg-0" do |form| %>
+        <div class="col-md-7">
+          <%= form.label :word, "検索文字列", class: "sr-only" %>
+          <%= form.text_field :word, placeholder: "カクテルを検索", class: "form-control mr-sm-3 ml-4" %>
+        </div>
+        <div class="col-md-5">
+          <%= form.submit "検索", class: "btn btn-outline-success my-2 my-sm-0" %>
+        </div>
+      <% end %>
+    </div>
   </div>
-</div>
 
 <div id="main">
   <div class="row mt-3">  
